src/objects/sos_auto_setup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>names of objects for auto create</description>
    <fields>
        <fullName>deployment__c</fullName>
        <defaultValue>&quot;SOS Deployment&quot;</defaultValue>
        <label>deployment</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permission_set__c</fullName>
        <defaultValue>&quot;SOS Permission&quot;</defaultValue>
        <label>permission_set</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queue__c</fullName>
        <defaultValue>&quot;SOS Queue&quot;</defaultValue>
        <label>queue</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>routing_config__c</fullName>
        <defaultValue>&quot;SOS Route&quot;</defaultValue>
        <label>routing_config</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>service_presence__c</fullName>
        <defaultValue>&quot;SOS Online&quot;</defaultValue>
        <label>service_presence</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>sos_auto_setup</label>
</CustomObject>